[gd_scene load_steps=2 format=3 uid="uid://wip_debughud_20260215a"]

[ext_resource type="Script" path="res://scripts/hud/debug_hud.gd" id="1"]

[node name="DebugHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 520.0
offset_bottom = 220.0

[node name="VBox" type="VBoxContainer" parent="Panel"]

[node name="Line1" type="Label" parent="Panel/VBox"]
text = ""

[node name="Line2" type="Label" parent="Panel/VBox"]
text = ""

[node name="Line3" type="Label" parent="Panel/VBox"]
text = ""

[node name="Line4" type="Label" parent="Panel/VBox"]
text = ""

[node name="Line5" type="Label" parent="Panel/VBox"]
text = ""
